FAIRSPC-102: fixed view update on triple deletion (property deletion)